--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #c9caca;
+  background-color: transparent;
   color: #f9f9fa;
   padding: 2em;
 }
