--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   border-radius: 16px;
   padding: 2.5em;
   box-shadow: 0 12px 24px rgba(0,0,0,0.05);
-  border: 1px solid #E0DDD7;
+  border: 1px solid #37FFFF;
   max-width: 640px;
   margin: auto;
 }
