--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: transparent; !important
+  background-color: transparent !important
   padding: 2em;
 }
 
